--- a/package.json
+++ b/package.json
@@ -14,16 +14,21 @@
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "primeicons": "^7.0.0",
+    "primevue": "^3.53.1",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
+    "vue-router": "^4.5.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.9",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/test-utils": "^2.4.6",
+    "@vue/compiler-sfc": "^3.5.13",
+    "@vue/test-utils": "^2.4.0-alpha.2",
     "@vue/tsconfig": "^0.7.0",
+    "@vue/vue3-jest": "^29.2.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-transform-stub": "^2.0.0",
